[package]
name = "liba"
version = "0.1.11"
authors = ["tqfx <tqfx@tqfx.org>"]
description = "An algorithm library based on C/C++"
documentation = "https://docs.rs/liba"
repository = "https://github.com/tqfx/liba"
homepage = "https://github.com/tqfx/liba"
license = "MPL-2.0"
keywords = ["algorithm"]
categories = ["algorithms"]
edition = "2018"

[build-dependencies]
cmake = "0.1"

[features]
std = []
# floating-point number are stored using C’s float type
float = []
