[package]
name = "liba"
version = "0.1.12"
authors = ["tqfx <tqfx@tqfx.org>"]
description = "An algorithm library based on C/C++"
documentation = "https://docs.rs/liba"
repository = "https://github.com/tqfx/liba"
homepage = "https://github.com/tqfx/liba"
license = "MPL-2.0"
keywords = ["algorithm"]
categories = ["algorithms"]
edition = "2018"

[build-dependencies]
cmake = { version = "0.1", optional = true }
cc = "1"

[features]
static_crt = []
# floating-point number are stored using C’s float type
float = []
std = []
