option('real',
        type: 'combo',
        choices: ['4', '8', '16'],
        value: '8')

option('math',
        type: 'string',
        value: '')

option('java',
        type: 'string',
        value: '')

option('lua',
        type: 'string',
        value: '')

option('python',
        type: 'boolean',
        value: false)

option('quickjs',
        type: 'string',
        value: '')

option('rust',
        type: 'boolean',
        value: false)
