[metadata]
name = liba
version = 0.1.5
url = https://github.com/tqfx/liba.git
author = tqfx
author_email = tqfx@tqfx.org
classifiers =
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
license = MPL-2.0
description = An algorithm library based on C/C++ language
long_description = file: README.md
long_description_content_type = text/markdown
keywords = algorithms
platforms = CPython
[build_ext]
inplace=1
