[metadata]
name = liba
version = 0.1.15
url = https://github.com/tqfx/liba
author = tqfx
author_email = tqfx@tqfx.org
classifiers =
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python
license = MPL-2.0
description = An algorithm library based on C/C++
long_description = file: README.md
long_description_content_type = text/markdown
keywords = algorithms
[options]
packages=.
package_dir=
    =python
[build_ext]
inplace=1
